# openapi-gateway

./: CLAUDE.md  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
clients/: README.md  pyproject.toml
clients/django_gateway/: __init__.py  decorators.py  drf.py  middleware.py
config/: public-services.json
gateway/: labels.py  main.py  settings.py
gateway/api/: admin.py  docs.py
gateway/auth/: api_keys.py  middleware.py
gateway/config/: schema.py
gateway/discovery/: docker_watcher.py  manual_loader.py  openapi_fetcher.py
gateway/proxy/: forwarder.py
gateway/registry/: filter.py  route_registry.py
tests/: conftest.py  test_admin.py  test_auth.py  test_fetcher.py  test_filter.py  test_forwarder.py  test_labels.py  test_manual_loader.py  test_registry.py
